Make the colors even better

--- a/alacritty.toml
+++ b/alacritty.toml
@@ -13,10 +13,10 @@ cursor = 'CellForeground'
 [colors.normal]
 # Normal colors used by applications
 black = '#282A36'
-red = '#FF79C6'
+red = '#FFAFCC'
 green = '#8BE9FD'
 blue = '#8BE9FD'
-magenta = '#8BE9FD'
+magenta = '#FFC8DD'
 cyan = '#8BE9FD'
 white = '#F8F8F2'
 yellow = '#CBC3E3'
@@ -24,10 +24,10 @@ yellow = '#CBC3E3'
 [colors.bright]
 # Bright colors used for emphasis
 black = '#F8F8F2'
-red = '#FF79C6'
-green = '#8BE9FD'
+red = '#FFAFCC'
+green = '#BDE0FE'
 yellow = '#CBC3E3'
-blue = '#8BE9FD'
-magenta = '#8BE9FD'
-cyan = '#8BE9FD'
+blue = '#BDE0FE'
+magenta = '#FFC8DD'
+cyan = '#BDE0FE'
 white = '#F8F8F2'
