Fix invisible text on selected items in TUI apps and wofi
The bright black color (palette 8) was set to #F8F8F2 (white), which is
the same as the foreground text color. This caused selected text to be
invisible in terminal TUI apps like bluetui, btop, and wofi menus.

Changes:
- alacritty.toml: Change bright black from #F8F8F2 to #44475A
- ghostty.conf: Change palette 8 from #F8F8F2 to #44475A
- btop.theme: Change selected_bg from #F8F8F2 to #44475A
- wofi.css: Use alpha(@gray3, 0.3) for selection background instead of @gray1

--- a/alacritty.toml
+++ b/alacritty.toml
@@ -23,7 +23,7 @@ yellow = '#CBC3E3'
 
 [colors.bright]
 # Bright colors used for emphasis
-black = '#F8F8F2'
+black = '#44475A'
 red = '#FFAFCC'
 green = '#BDE0FE'
 yellow = '#CBC3E3'
