--- a/ghostty.conf
+++ b/ghostty.conf
@@ -13,7 +13,7 @@ palette = 6=#8BE9FD
 palette = 7=#F8F8F2
 
 # Bright colors
-palette = 8=#F8F8F2
+palette = 8=#44475A
 palette = 9=#FFAFCC
 palette = 10=#BDE0FE
 palette = 11=#CBC3E3
